@@ -1,6 +1,7 @@
 // pkg_ver_item.h (This is -*-c++-*-)
 //
 //  Copyright 1999-2002, 2004-2005, 2007-2008 Daniel Burrows
+//  Copyright 2015 Manuel A. Fernandez Montecelo
 //
 //  This program is free software; you can redistribute it and/or modify
 //  it under the terms of the GNU General Public License as published by
