@@ -33,6 +33,8 @@ Version 0.7.3 UNRELEASED
   * [curses] Don't precede Tags field by newline in package info screen
     (Closes: #799933)
 
+  * Correctly detect state of vers/pkg when is ConfigFiles (Closes: #698768)
+
 - User visible changes:
 
   * Make boundaries of sessions in the log file more clear (Closes: #269275)
